# exponential-buckets-explorer

./: .gitignore  .tauriignore  404.html  CNAME  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  gh-pages-deploy.yml  release.yml
crates/tauri/: Cargo.toml  Tauri.toml
crates/tauri/icons/: icon.icns
crates/web-ui/: 404.html  Cargo.toml  index.html
crates/web-ui/src/app/: mod.rs
crates/web-ui/src/components/: buckets_chart.rs  buckets_table.rs  input.rs  mod.rs
crates/web-ui/src/components/input/: mod.rs  number_input.rs  select_input.rs
crates/web-ui/src/pages/: buckets_explorer_page.rs  not_found_page.rs
crates/web-ui/src/types/: buckets.rs  mod.rs  units.rs
src/: main.rs
src/app/: mod.rs
src/components/: buckets_table.rs  input.rs
src/pages/: buckets_explorer_page.rs  mod.rs
