[package]
name = "exponential-buckets-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# `s` gives better result than `z` size (at the moment of comparing)
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1", optional = true }
log = { version = "0.4"}
leptos = { version = "0.5.7", features = ["csr"] }
leptos_router = {  version = "0.5.7", features = ["csr"] }
leptos-use = { version = "0.9.0", git = "https://github.com/synphonyte/leptos-use" }
chart-js-rs = { version = "0.0.13" }


[features]
default = []
logging = ["console_error_panic_hook", "console_log"]


