[package]
name = "exponential-buckets-explorer-web-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1", optional = true }
log = { version = "0.4"}
leptos = { version = "0.5.7", features = ["csr"] }
leptos_router = {  version = "0.5.7", features = ["csr"] }
leptos-use = { version = "0.9.0", git = "https://github.com/synphonyte/leptos-use", rev = "67fa44a5acc8a228350820fd612e2d25a7fb64a8" }
charming = { version = "0.3.1", features = ["wasm"] }


[features]
default = []
logging = ["console_error_panic_hook", "console_log"]


