[package]
name = "exponential-buckets-explorer-web-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chart-js-rs = { version = "0.0.13" , git = "https://github.com/DDtKey/chart-js-rs.git", branch = "support-chart-updates"}
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1", optional = true }
humantime = { version = "2.1.0" }
leptos = { version = "0.5.7", features = ["csr"] }
leptos-use = { version = "0.9.0", git = "https://github.com/synphonyte/leptos-use", rev = "67fa44a5acc8a228350820fd612e2d25a7fb64a8" }
leptos_router = {  version = "0.5.7", features = ["csr"] }
log = { version = "0.4"}
ubyte = { version = "0.10.4" }
strum = { version = "0.25.0", features = ["derive"] }
url = { version = "2.5.0" }
web-sys = {  version = "0.3.67", features = ["Clipboard", "Navigator"] }
wasm-bindgen-futures = { version = "0.4.40" }

[features]
default = []
logging = ["console_error_panic_hook", "console_log"]


