[package]
name = "exponential-buckets-explorer-web-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chart-js-rs = { version = "0.0.13" , git = "https://github.com/DDtKey/chart-js-rs.git", branch = "support-chart-updates"}
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1", optional = true }
humantime = { version = "2.1.0" }
leptos = { version = "0.6.5", features = ["csr"] }
leptos-use = { version = "0.10.2"}
leptos_router = {  version = "0.6.5", features = ["csr"] }
log = { version = "0.4"}
ubyte = { version = "0.10.4" }
strum = { version = "0.26.1", features = ["derive"] }

[features]
default = []
logging = ["console_error_panic_hook", "console_log"]


